--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
   <ul class="nav">
-    <li class="nav-item" *ngFor="let item of items" >
+    <li *ngFor="let item of items" class="nav-item" [ngClass]="(item.claseActiva == true ? item.clase : '')" (click)="cambiarSelectorItem(item.id)">
       <a [routerLink]="item.url" routerLinkActive="active">
         <img src="../../../../assets/imagenes/{{item.icono}}.png" alt="Logo {{item.icono}}" class="icono-opciones">
         <span>{{item.nombre}}</span>
