--- a/src/app/feature/mascota/components/mascota/mascota.component.html
+++ b/src/app/feature/mascota/components/mascota/mascota.component.html
@@ -1,1 +1,6 @@
-<p>mascota works!</p>
+<div class="contenedor-menu">
+    <button class="btn-menu"><img src="../../../../../assets/imagenes/agregar.png" alt="Logo agregar" class="img-btn"></button>
+    <button class="btn-menu"><img src="../../../../../assets/imagenes/actualizar.png" alt="Logo actualizar" class="img-btn"></button>
+    <button class="btn-menu"><img src="../../../../../assets/imagenes/buscar.png" alt="Logo buscar" class="img-btn"></button>
+    <button class="btn-menu"><img src="../../../../../assets/imagenes/eliminar.png" alt="Logo eliminar" class="img-btn"></button>
+</div>
