--- a/src/app/core/components/navbar/navbar.component.css
+++ b/src/app/core/components/navbar/navbar.component.css
@@ -40,6 +40,7 @@ nav a {
 span {
     font-size: 18px;
     color: #000;
+    font-family: cursive;
 }
 
 .opcion-mascota-active, .opcion-servicio-active {
