--- a/src/app/feature/mascota/components/crearMascota/crear-mascota/crear-mascota.component.html
+++ b/src/app/feature/mascota/components/crearMascota/crear-mascota/crear-mascota.component.html
@@ -1,28 +1,30 @@
-<form id="registro-mascota">
-    <div class="row">
-        <label class="required" for="codigo-mascota">Codigo mascota:</label><br/>
-        <input id="codigo-mascota" class="input" name="codigo-mascota" type="text" size="20" [(ngModel)]="mascota.codigoMascota"/><br/>
+<div class="contenedor-formulario">
+<form id="registro-mascota" class="formulario-mascota">
+    <div class="div-input-mascota">
+        <label class="required" for="codigo-mascota">Codigo mascota:</label>
+        <input id="codigo-mascota" class="input" name="codigo-mascota" type="text" size="20" [(ngModel)]="mascota.codigoMascota"/>
         <span id="name-validation" class="error_message"></span>
     </div>
-    <div class="row">
-        <label class="required" for="nombre-mascota">Nombre mascota:</label><br/>
-        <input id="nombre-mascota" class="input" name="nombre-mascota" type="text" size="50" [(ngModel)]="mascota.nombreMascota"/><br/>
+    <div class="div-input-mascota">
+        <label class="required" for="nombre-mascota">Nombre mascota:</label>
+        <input id="nombre-mascota" class="input" name="nombre-mascota" type="text" size="50" [(ngModel)]="mascota.nombreMascota"/>
         <span id="name-validation" class="error_message"></span>
     </div>
-    <div class="row">
-        <label class="required" for="raza">Raza:</label><br/>
-        <input id="raza" class="input" name="raza" type="text" size="50" [(ngModel)]="mascota.raza"/><br/>
+    <div class="div-input-mascota">
+        <label class="required" for="raza">Raza:</label>
+        <input id="raza" class="input" name="raza" type="text" size="50" [(ngModel)]="mascota.raza"/>
         <span id="name-validation" class="error_message"></span>
     </div>
-    <div class="row">
-        <label class="required" for="peso">Peso:</label><br/>
-        <input id="peso" class="input" name="peso" type="number" max="99" [(ngModel)]="mascota.peso"/><br/>
+    <div class="div-input-mascota">
+        <label class="required" for="peso">Peso:</label>
+        <input id="peso" class="input" name="peso" type="number" max="99" [(ngModel)]="mascota.peso"/>
         <span id="name-validation" class="error_message"></span>
     </div>
-    <div class="row">
-        <label class="required" for="fecha-nacimiento">Fecha nacimiento:</label><br/>
-        <input id="fecha-nacimiento" class="input" name="fecha-nacimiento" type="date" [(ngModel)]="mascota.fechaNacimientoMascota"/><br/>
+    <div class="div-input-mascota">
+        <label class="required" for="fecha-nacimiento">Fecha nacimiento:</label>
+        <input id="fecha-nacimiento" class="input" name="fecha-nacimiento" type="date" [(ngModel)]="mascota.fechaNacimientoMascota"/>
         <span id="name-validation" class="error_message"></span>
     </div>
-    <input id="crear-mascota" type="submit" value="Crear Mascota" (click)="registroMascota()"/>
+    <input id="crear-mascota" class="input-btn-crear" type="submit" value="Crear Mascota" (click)="registroMascota()"/>
 </form>
+</div>
