--- a/src/app/feature/mascota/components/crearMascota/crear-mascota/crear-mascota.component.html
+++ b/src/app/feature/mascota/components/crearMascota/crear-mascota/crear-mascota.component.html
@@ -26,5 +26,8 @@
         <span id="name-validation" class="error_message"></span>
     </div>
     <input id="crear-mascota" class="input-btn-crear" type="submit" value="Crear Mascota" (click)="registroMascota()"/>
+    <br>
+    <div class="alert alert-danger" *ngIf="this.mostrarMensajeError">Error al registrar la mascota, intente nuevamente.</div>
+    <div class="alert alert-success" *ngIf="this.mostrarMensaje">Registro exitoso.</div>
 </form>
 </div>
