Se crea html crear servicio

--- a/src/app/feature/servicio/components/servicio/servicio.component.html
+++ b/src/app/feature/servicio/components/servicio/servicio.component.html
@@ -1,1 +1,6 @@
-<p>servicio works!</p>
+<div class="contenedor-menu">
+    <button class="btn-menu" (click)="redireccionPagina('servicio/crear-servicio')"><img src="../../../../../assets/imagenes/agregar.png" alt="Logo agregar" class="img-btn"></button>
+    <button class="btn-menu" (click)="redireccionPagina('servicio/crear-servicio')"><img src="../../../../../assets/imagenes/actualizar.png" alt="Logo actualizar" class="img-btn"></button>
+    <button class="btn-menu" (click)="redireccionPagina('servicio/crear-servicio')"><img src="../../../../../assets/imagenes/buscar.png" alt="Logo buscar" class="img-btn"></button>
+    <button class="btn-menu" (click)="redireccionPagina('servicio/crear-servicio')"><img src="../../../../../assets/imagenes/eliminar.png" alt="Logo eliminar" class="img-btn"></button>
+</div>
