--- a/src/app/feature/servicio/components/crearServicio/crear-servicio/crear-servicio.component.html
+++ b/src/app/feature/servicio/components/crearServicio/crear-servicio/crear-servicio.component.html
@@ -13,19 +13,18 @@
             </select>
         </div>
         <div class="div-input-servicio">
-            <label for="mascotas">Selecciona el veterinario</label>
+            <label for="mascotas">Selecciona la mascota</label>
             <select name="mascotas" id="lista-mascotas">
                 <option *ngFor="let mascota of listaMascotas" id="mascota-{{mascota.id}}" value="{{mascota.nombreMascota}}">{{mascota.id}} - {{mascota.nombreMascota}}</option>
             </select>
         </div>
         <div class="div-input-servicio">
-            <label class="required" for="peso">Peso:</label>
-            <input id="peso" class="input" name="peso" type="number" max="99"/>
-            <span id="name-validation" class="error_message"></span>
+            <label for="Precio">Precio:</label>
+            <input id="precio" class="input" name="precio" type="number" value="20000" disabled/>
         </div>
         <div class="div-input-servicio">
-            <label class="required" for="fecha-nacimiento">Fecha nacimiento:</label>
-            <input id="fecha-nacimiento" class="input" name="fecha-nacimiento" type="date"/>
+            <label class="required" for="fecha-compra">Fecha compra:</label>
+            <input id="fecha-compra" class="input" name="fecha-compra" type="date"/>
             <span id="name-validation" class="error_message"></span>
         </div>
         <input id="crear-servicio" class="input-btn-crear" type="submit" value="Crear Mascota"/>
