--- a/src/app/core/components/toolbar/toolbar.component.css
+++ b/src/app/core/components/toolbar/toolbar.component.css
@@ -6,7 +6,7 @@
     padding: 0 16px;
     border: 3px solid #01a65d;
     border-radius: 10px;
-    width: max-content;    
+    width: auto;    
     align-self: center;
 }
 
