--- a/src/app/feature/mascota/components/buscarMascota/buscar-mascota/buscar-mascota.component.html
+++ b/src/app/feature/mascota/components/buscarMascota/buscar-mascota/buscar-mascota.component.html
@@ -1,1 +1,28 @@
-<p>buscar-mascota works!</p>
+<div class="contenedor-formulario">
+    <form id="registro-mascota" class="formulario-mascota">
+        <div class="div-input-mascota">
+            <label class="required" for="codigo-mascota">Codigo mascota:</label>
+            <input id="codigo-mascota" class="input" name="codigo-mascota" type="text" size="20" [(ngModel)]="mascota.codigoMascota"/>
+        </div>
+        <div class="div-input-mascota">
+            <label class="required" for="nombre-mascota">Nombre mascota:</label>
+            <input id="nombre-mascota" class="input" name="nombre-mascota" type="text" [(ngModel)]="mascota.nombreMascota" disabled/>
+        </div>
+        <div class="div-input-mascota">
+            <label class="required" for="raza">Raza:</label>
+            <input id="raza" class="input" name="raza" type="text" [(ngModel)]="mascota.raza" disabled/>
+        </div>
+        <div class="div-input-mascota">
+            <label class="required" for="peso">Peso:</label>
+            <input id="peso" class="input" name="peso" type="number" [(ngModel)]="mascota.peso" disabled/>
+        </div>
+        <div class="div-input-mascota">
+            <label class="required" for="fecha-nacimiento">Fecha nacimiento:</label>
+            <input id="fecha-nacimiento" class="input" name="fecha-nacimiento" type="date" [(ngModel)]="mascota.fechaNacimientoMascota" disabled/>
+        </div>
+        <input id="buscar-mascota" class="input-btn-crear" type="submit" value="Buscar Mascota" (click)="buscarMascota()"/>
+        <br>
+        <div class="alert alert-danger" *ngIf="this.mostrarMensajeError">Error al buscar la mascota, intente nuevamente con un código valido.</div>
+        <div class="alert alert-success" *ngIf="this.mostrarMensaje">Busqueda exitosa.</div>
+    </form>
+    </div>
