--- a/src/app/feature/mascota/components/buscarMascota/buscar-mascota/buscar-mascota.component.html
+++ b/src/app/feature/mascota/components/buscarMascota/buscar-mascota/buscar-mascota.component.html
@@ -6,23 +6,24 @@
         </div>
         <div class="div-input-mascota">
             <label class="required" for="nombre-mascota">Nombre mascota:</label>
-            <input id="nombre-mascota" class="input" name="nombre-mascota" type="text" [(ngModel)]="mascota.nombreMascota" disabled/>
+            <input id="nombre-mascota" class="input" name="nombre-mascota" type="text" [(ngModel)]="mascota.nombreMascota" [disabled]="!actualizacion"/>
         </div>
         <div class="div-input-mascota">
             <label class="required" for="raza">Raza:</label>
-            <input id="raza" class="input" name="raza" type="text" [(ngModel)]="mascota.raza" disabled/>
+            <input id="raza" class="input" name="raza" type="text" [(ngModel)]="mascota.raza" [disabled]="!actualizacion"/>
         </div>
         <div class="div-input-mascota">
             <label class="required" for="peso">Peso:</label>
-            <input id="peso" class="input" name="peso" type="number" [(ngModel)]="mascota.peso" disabled/>
+            <input id="peso" class="input" name="peso" type="number" [(ngModel)]="mascota.peso" [disabled]="!actualizacion"/>
         </div>
         <div class="div-input-mascota">
             <label class="required" for="fecha-nacimiento">Fecha nacimiento:</label>
-            <input id="fecha-nacimiento" class="input" name="fecha-nacimiento" type="date" [(ngModel)]="mascota.fechaNacimientoMascota" disabled/>
+            <input id="fecha-nacimiento" class="input" name="fecha-nacimiento" type="date" [(ngModel)]="mascota.fechaNacimientoMascota" [disabled]="!actualizacion"/>
         </div>
         <input id="buscar-mascota" class="input-btn-crear" type="submit" value="Buscar Mascota" (click)="buscarMascota()"/>
-        <input id="actualizar-mascota" *ngIf="mostrarBotonActualizarEliminar" class="input-btn-crear" type="submit" value="Actualizar Mascota" (click)="actualizarMascota()"/>
-        <input id="eliminar-mascota" *ngIf="mostrarBotonActualizarEliminar" class="input-btn-crear" type="submit" value="Eliminar Mascota" (click)="eliminarMascota()"/>
+        <input id="actualizar-mascota" *ngIf="mostrarBotonActualizar" class="input-btn-crear" type="submit" value="Actualizar Mascota" (click)="actualizarMascota()"/>
+        <input id="guardar-mascota" *ngIf="mostrarBotonGuardar" class="input-btn-crear" type="submit" value="Guardar actualizacion" (click)="guardarActualizacion()"/>
+        <input id="eliminar-mascota" *ngIf="mostrarBotonEliminar" class="input-btn-crear" type="submit" value="Eliminar Mascota" (click)="eliminarMascota()"/>
         <br>
         <div class="alert alert-danger" *ngIf="this.mostrarMensajeError">{{errorBuscarActualizarEliminar}}</div>
         <div class="alert alert-success" *ngIf="this.mostrarMensaje">{{exitoBuscarActualizarEliminar}}</div>
