--- a/src/app/feature/servicio/components/listaCitas/lista-citas/lista-citas.component.html
+++ b/src/app/feature/servicio/components/listaCitas/lista-citas/lista-citas.component.html
@@ -2,12 +2,13 @@
 <div class="div-input-servicio">
     <label for="cedula">Cedula veterinario:</label>
     <input id="cedula" class="input" name="cedula" type="text" [(ngModel)]="cedulaVeterinaria"/>
-    <input id="buscar-cita" class="input-btn-crear" type="submit" value="Buscar citas" (click)="buscarCitasVeterinario()"/>
+    <input id="buscar-cita" class="input-btn-crear" type="submit" value="Buscar citas Veterinario" (click)="buscarCitasVeterinario(true)"/>
+    <input id="buscar-cita" class="input-btn-crear" type="submit" value="Buscar todas las citas" (click)="buscarCitasVeterinario(false)"/>
 </div>
 
-<p *ngIf="mostrarResultado">Citas del veterinario {{veterinario.nombreVeterinario}}</p>
+<p *ngIf="mostrarResultado">Citas del veterinario</p>
 <table *ngIf="mostrarResultado">
-  <caption>Lista de citas para el veterinario {{veterinario.nombreVeterinario}}</caption>
+  <caption>Lista de citas para el veterinario</caption>
     <tr>
       <th id="titulo-id">Id</th>
       <th id="titulo-veterinario">Nombre Veterinario</th>
