--- a/src/app/feature/servicio/components/buscarServicio/buscar-servicio/buscar-servicio.component.html
+++ b/src/app/feature/servicio/components/buscarServicio/buscar-servicio/buscar-servicio.component.html
@@ -1,7 +1,6 @@
 <div class="contenedor-menu">
     <button id="listar-veterinarios" class="btn-menu" (click)="consultarVeterinarios()">Veterinarios</button>
-    <button id="listar-citas-veterinarios" class="btn-menu" (click)="listarCitasVeterinario()">Citas</button>
-    <button id="listar-cita-mascota" class="btn-menu">Citas por mascota</button>
+    <button id="listar-citas" class="btn-menu" (click)="listarCitasVeterinario()">Citas</button>
     <button id="facturas-mascota" class="btn-menu">Facturas por mascota</button>
 </div>
 <app-lista-veterinarios *ngIf="cargarListaVeterinarios" [listaVeterinarios]='listaVeterinarios'></app-lista-veterinarios>
