--- a/src/app/feature/servicio/components/listaCitas/lista-citas/lista-citas.component.html
+++ b/src/app/feature/servicio/components/listaCitas/lista-citas/lista-citas.component.html
@@ -1,7 +1,7 @@
 
 <div class="div-input-servicio">
-    <label for="cedula">Cedula veterinario:</label>
-    <input id="cedula" class="input" name="Codigo busqueda" type="text" [(ngModel)]="codigoBusqueda"/>
+    <label for="codigo_busqueda">Codigo busqueda:</label>
+    <input id="cedula" class="input" name="codigo_busqueda" type="text" [(ngModel)]="codigoBusqueda"/>
     <input id="buscar-cita" class="input-btn-crear" type="submit" value="Buscar citas veterinario" (click)="buscarCitas(1)"/>
     <input id="buscar-cita" class="input-btn-crear" type="submit" value="Buscar cita mascota" (click)="buscarCitas(2)"/>
     <input id="buscar-cita" class="input-btn-crear" type="submit" value="Buscar todas las citas" (click)="buscarCitas(3)"/>
