--- a/src/app/feature/mascota/components/mascota/mascota.component.html
+++ b/src/app/feature/mascota/components/mascota/mascota.component.html
@@ -1,4 +1,7 @@
 <div class="contenedor-menu">
-    <button id="crearMascota" class="btn-menu" (click)="redireccionPagina('mascota/crear-mascota')"><img src="../../../../../assets/imagenes/agregar.png" alt="Logo agregar" class="img-btn"></button>
-    <button id="buscarMascota" class="btn-menu" (click)="redireccionPagina('mascota/buscar-mascota')"><img src="../../../../../assets/imagenes/buscar.png" alt="Logo buscar" class="img-btn"></button>
+    <span>Administrador mascotas</span>
+    <button id="crearMascota" class="btn-menu" (click)="redireccionPagina('mascota/crear-mascota')"><img
+            src="../../../../../assets/imagenes/agregar.png" alt="Logo agregar" class="img-btn"></button>
+    <button id="buscarMascota" class="btn-menu" (click)="redireccionPagina('mascota/buscar-mascota')"><img
+            src="../../../../../assets/imagenes/buscar.png" alt="Logo buscar" class="img-btn"></button>
 </div>
