--- a/src/app/core/components/navbar/navbar.component.css
+++ b/src/app/core/components/navbar/navbar.component.css
@@ -47,3 +47,9 @@ span {
     background: #cdf0cc;
     height: 45px;
 }
+
+@media screen and (max-width: 998px) {
+    span {
+        font-size: 15px;
+    }
+}
