--- a/src/app/feature/servicio/components/servicio/servicio.component.html
+++ b/src/app/feature/servicio/components/servicio/servicio.component.html
@@ -1,4 +1,7 @@
 <div class="contenedor-menu">
-    <button id="crearServicio" class="btn-menu" (click)="redireccionPagina('servicio/crear-servicio')"><img src="../../../../../assets/imagenes/agregar.png" alt="Logo agregar" class="img-btn"></button>
-    <button id="buscarServicio" class="btn-menu" (click)="redireccionPagina('servicio/buscar-servicio')"><img src="../../../../../assets/imagenes/buscar.png" alt="Logo buscar" class="img-btn"></button>
-   </div>
+    <span>Administrador servicios</span>
+    <button id="crearServicio" class="btn-menu" (click)="redireccionPagina('servicio/crear-servicio')"><img
+            src="../../../../../assets/imagenes/agregar.png" alt="Logo agregar" class="img-btn"></button>
+    <button id="buscarServicio" class="btn-menu" (click)="redireccionPagina('servicio/buscar-servicio')"><img
+            src="../../../../../assets/imagenes/buscar.png" alt="Logo buscar" class="img-btn"></button>
+</div>
