--- a/src/app/feature/mascota/components/crearMascota/crear-mascota/crear-mascota.component.css
+++ b/src/app/feature/mascota/components/crearMascota/crear-mascota/crear-mascota.component.css
@@ -45,6 +45,13 @@
     margin: 15px;
 }
 
+span {
+    font-size: 18px;
+    color: #000;
+    font-family: cursive;
+    display: block;
+}
+
 @media screen and (max-width: 998px) {
 
     .formulario-mascota {
@@ -53,10 +60,16 @@
 
     .div-input-mascota {
         margin: 5px 0px;
+        width: 90%;
     }
 
     .formulario-mascota label {
-        width: 35%;
-        font-size: 16px;
+        width: 50%;
+        font-size: 15px;
+    }
+
+    .formulario-mascota input {
+        width: 50%;
+        margin-left: 0px;
     }
 }
