--- a/src/app/feature/servicio/components/crearServicio/crear-servicio/crear-servicio.component.html
+++ b/src/app/feature/servicio/components/crearServicio/crear-servicio/crear-servicio.component.html
@@ -23,11 +23,11 @@
             </select>
         </div>
         <div class="div-input-servicio">
-            <label for="Precio" class="campo-input">Precio:</label>
+            <label for="Precio" class="campo-label">Precio:</label>
             <input id="precio" class="campo-input" name="precio" type="text" value="{{precioServicioString}}" disabled/>
         </div>
         <div class="div-input-servicio">
-            <label class="campo-input" for="fecha-compra">Fecha compra:</label>
+            <label class="campo-label" for="fecha-compra">Fecha compra:</label>
             <input id="fecha-compra" class="campo-input" name="fecha-compra" type="date" [(ngModel)]="cita.fecha"/>
             <span id="name-validation" class="error_message"></span>
         </div>
