--- a/src/app/feature/mascota/components/buscarMascota/buscar-mascota/buscar-mascota.component.html
+++ b/src/app/feature/mascota/components/buscarMascota/buscar-mascota/buscar-mascota.component.html
@@ -1,4 +1,5 @@
 <div class="contenedor-formulario">
+    <span>Buscar, actualizar y eliminar Mascota </span>
     <form id="registro-mascota" class="formulario-mascota">
         <div class="div-input-mascota">
             <label class="required" for="codigo-mascota">Codigo mascota:</label>
