--- a/src/app/feature/servicio/components/listaVeterinarios/lista-veterinarios/lista-veterinarios.component.css
+++ b/src/app/feature/servicio/components/listaVeterinarios/lista-veterinarios/lista-veterinarios.component.css
@@ -1,5 +1,35 @@
-table,
-th,
-td {
-    border: 1px solid black;
+:host {
+    font-family: cursive;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td,
+th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #ddd;
+}
+
+th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #cdf0cc;
+    color: #000;
+}
+
+span {
+    font-size: 18px;
+    color: #000;
+    font-family: cursive;
+    display: block;
 }
