--- a/src/app/feature/servicio/components/buscarServicio/buscar-servicio/buscar-servicio.component.css
+++ b/src/app/feature/servicio/components/buscarServicio/buscar-servicio/buscar-servicio.component.css
@@ -11,10 +11,11 @@
 
 .btn-menu {
     position: relative;
-    width: 50%;
+    width: 30%;
     border-radius: 10px;
     background: #cdf0cc;
     border: 3px solid #01a65d;
+    margin: 5px;
 }
 
 .img-btn {
@@ -22,13 +23,16 @@
     padding: 10px;
 }
 
-
 @media screen and (max-width: 998px) {
     .contenedor-menu {
         text-align: -webkit-center;
         width: 75%;
         height: auto;
         margin: 20px;
+    }
+
+    .btn-menu {
+        margin: 5px;
     }
 }
 
