--- a/src/app/feature/servicio/components/listaVeterinarios/lista-veterinarios/lista-veterinarios.component.css
+++ b/src/app/feature/servicio/components/listaVeterinarios/lista-veterinarios/lista-veterinarios.component.css
@@ -33,3 +33,9 @@ span {
     font-family: cursive;
     display: block;
 }
+
+@media screen and (max-width: 998px) {
+    table {
+        width: 80%;
+    }
+}
