--- a/src/app/feature/servicio/components/listaCitas/lista-citas/lista-citas.component.css
+++ b/src/app/feature/servicio/components/listaCitas/lista-citas/lista-citas.component.css
@@ -60,5 +60,14 @@ span {
 @media screen and (max-width: 998px) {
     table {
         width: 80%;
+        margin: 10px;    
+    }
+
+    .div-input-servicio .input-codigo {
+        width: 35%;
+    }
+
+    .input-btn {
+        width: 55%;
     }
 }
