--- a/src/app/feature/servicio/components/crearServicio/crear-servicio/crear-servicio.component.html
+++ b/src/app/feature/servicio/components/crearServicio/crear-servicio/crear-servicio.component.html
@@ -35,6 +35,6 @@
         <br>
         <div class="alert alert-danger" *ngIf="mostrarMensajeError">Error al registrar el servicio, intente nuevamente.</div>
         <div class="alert alert-danger" *ngIf="mostrarMensajeCitasMaximas">{{errorCitasMaximas}}</div>
-        <div class="alert alert-success" *ngIf="mostrarMensaje">Registro exitoso.</div>
+        <div id="registro-exitoso" class="alert alert-success" *ngIf="mostrarMensaje">Registro exitoso.</div>
     </form>
     </div>
